--- a/playground.ipynb
+++ b/playground.ipynb
@@ -84,9 +84,7 @@
      "challengify"
     ]
    },
-   "source": [
-    "> YOUR ANSWER HERE"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -167,9 +165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-03-04 07:25:51.707679: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-03-04 07:25:54.713124: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.keras import models\n",
     "from tensorflow.keras import layers\n",
@@ -254,15 +263,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 5)                 15        \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 4)                 24        \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 3)                 15        \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 1)                 4         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 58\n",
+      "Trainable params: 58\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "model.summary()"
    ]
   },
   {
@@ -302,13 +335,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Neural Network that can be well fitted to the XOR Dataset\n",
     "\n",
-    "pass  # YOUR CODE HERE"
+    "# $CHALLENGIFY_BEGIN\n",
+    "model = models.Sequential()\n",
+    "\n",
+    "model.add(layers.Dense(5, activation=\"relu\", input_dim=2)) # First hidden layer with 5 neurons\n",
+    "model.add(layers.Dense(3, activation=\"relu\"))              # Second hidden layer with 3 neurons\n",
+    "\n",
+    "model.add(layers.Dense(1, activation='sigmoid'))\n",
+    "# $CHALLENGIFY_END"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "tags": [
+     "delete"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_10 (Dense)            (None, 5)                 15        \n",
+      "                                                                 \n",
+      " dense_11 (Dense)            (None, 3)                 18        \n",
+      "                                                                 \n",
+      " dense_12 (Dense)            (None, 1)                 4         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 37\n",
+      "Trainable params: 37\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
    ]
   },
   {
@@ -335,13 +410,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Neural Network that can be well fitted to the Spiral Dataset\n",
     "\n",
-    "pass  # YOUR CODE HERE"
+    "# $CHALLENGIFY_BEGIN\n",
+    "model = models.Sequential()\n",
+    "\n",
+    "model.add(layers.Dense(6, activation=\"relu\", input_dim=2))\n",
+    "model.add(layers.Dense(5, activation=\"relu\")) \n",
+    "model.add(layers.Dense(4, activation=\"relu\")) \n",
+    "\n",
+    "model.add(layers.Dense(1, activation='sigmoid'))\n",
+    "# $CHALLENGIFY_END"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "tags": [
+     "delete"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_4\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_13 (Dense)            (None, 6)                 18        \n",
+      "                                                                 \n",
+      " dense_14 (Dense)            (None, 5)                 35        \n",
+      "                                                                 \n",
+      " dense_15 (Dense)            (None, 4)                 24        \n",
+      "                                                                 \n",
+      " dense_16 (Dense)            (None, 1)                 5         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 82\n",
+      "Trainable params: 82\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
    ]
   },
   {
@@ -438,13 +558,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Neural Network that can be well fitted to the Regression Dataset\n",
     "\n",
-    "pass  # YOUR CODE HERE"
+    "# $CHALLENGIFY_BEGIN\n",
+    "model = models.Sequential()\n",
+    "\n",
+    "model.add(layers.Dense(5, activation='relu', input_dim=2)) # First hidden layer with 5 neurons\n",
+    "model.add(layers.Dense(4, activation='relu')) # Second hidden layer with 4 neurons\n",
+    "model.add(layers.Dense(4, activation='relu')) # Second hidden layer with 4 neurons\n",
+    "\n",
+    "model.add(layers.Dense(1, activation='linear'))\n",
+    "# $CHALLENGIFY_END"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "tags": [
+     "delete"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_5\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_17 (Dense)            (None, 5)                 15        \n",
+      "                                                                 \n",
+      " dense_18 (Dense)            (None, 4)                 24        \n",
+      "                                                                 \n",
+      " dense_19 (Dense)            (None, 4)                 20        \n",
+      "                                                                 \n",
+      " dense_20 (Dense)            (None, 1)                 5         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 64\n",
+      "Trainable params: 64\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
    ]
   },
   {
@@ -460,13 +625,49 @@
     "\n",
     "🚀 ... and move on to the next challenge!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add -A\n",
+    "!git commit -m \"Fundamentals of deep learning-data-playground-Complete\"\n",
+    "!"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
